--- a/package.json
+++ b/package.json
@@ -34,13 +34,17 @@
         "solhint": "^2.3.0",
         "solidity-coverage": "^0.6.7",
         "standard": "^14.0.2",
-        "truffle": "^5.0.41",
+        "truffle": "5.0.8",
         "truffle-assertions": "^0.9.1",
         "web3": "^1.2.0"
     },
     "dependencies": {
+        "@truffle/hdwallet-provider": "^1.4.0",
         "decimal.js": "^10.2.0",
+        "ethers": "^5.2.0",
         "ganache-cli": "^6.7.0",
-        "global": "^4.4.0"
+        "global": "^4.4.0",
+        "truffle-hdwallet-provider-privkey": "^0.3.0",
+        "truffle-privatekey-provider": "^1.5.0"
     }
 }
